// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-aXebn hJQzfR"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-jSROQh gOBvUA"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gLwKcM gncfMS"
    >
      <div
        className="sc-hJISdk gPpBWA"
      />
    </span>
    <span
      className="sc-jiXIMO dXFOLF"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-aXebn hJQzfR"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-jSROQh gOBvUA"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gLwKcM gncfMS"
    >
      <div
        className="sc-hJISdk gPpBWA"
      />
    </span>
    <span
      className="sc-jiXIMO dXFOLF"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-aXebn hJQzfR"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-jSROQh gOBvUA"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-gLwKcM gncfMS"
    >
      <div
        className="sc-hJISdk gPpBWA"
      />
    </span>
    <span
      className="sc-jiXIMO dXFOLF"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-aXebn hJQzfR"
>
  <input
    checked={true}
    className="sc-jSROQh gOBvUA"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-gLwKcM gncfMS"
  >
    <div
      className="sc-hJISdk gPpBWA"
    />
  </span>
  <span
    className="sc-jiXIMO dXFOLF"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-aXebn hJQzfR"
>
  <input
    className="sc-jSROQh gOBvUA"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-gLwKcM gncfMS"
  >
    <div
      className="sc-hJISdk gPpBWA"
    />
  </span>
  <span
    className="sc-jiXIMO dXFOLF"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-aXebn hJQzfR"
      htmlFor="button1"
    >
      <input
        className="sc-jSROQh gOBvUA"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gLwKcM gncfMS"
      >
        <div
          className="sc-hJISdk gPpBWA"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-aXebn hJQzfR"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-jSROQh gOBvUA"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gLwKcM gncfMS"
      >
        <div
          className="sc-hJISdk gPpBWA"
        />
      </span>
      <span
        className="sc-jiXIMO dXFOLF"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-aXebn hJQzfR"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-jSROQh gOBvUA"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gLwKcM gncfMS"
      >
        <div
          className="sc-hJISdk gPpBWA"
        />
      </span>
      <span
        className="sc-jiXIMO dXFOLF"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-aXebn hJQzfR"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-jSROQh gOBvUA"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-gLwKcM gncfMS"
      >
        <div
          className="sc-hJISdk gPpBWA"
        />
      </span>
      <span
        className="sc-jiXIMO dXFOLF"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
